# ParcelStation

./: .clangd  .gitignore  CMakeLists.txt  README.md  protocol.md
client/: CMakeLists.txt  common.c  common.h  main.c  main.h  manager_client.c  postman_client.c  user_client.c
postman/: common.c  main.c  user_client.c
server/: CMakeLists.txt  main.c  server.c
